# micro-fencing

./: CMakeLists.txt  PIC16F876.md  README.md  mpu-6050.md  thoughts.md
src/: button.c  i2c.c  main.c
src/includes/: accelerometer.h  button.h  i2c.h  i2c.h2  lights.h  lights.h2  main.h  main.h2  speaker.h
src/includes/I2Cdev/: MPU6050.h
src/sources/: I2Cdev.c  MPU6050.c  accelerometer.c  accelerometer.h  button.c  i2c.c  i2c.h  lights.c  main.c  main.h  speaker.c
